bins/havenc/tests/cases/fail/test_generic_enum_no_turbofish.hv
//@ error: enum 'Option' is generic
// a generic enum's tuple variant needs explicit type arguments - no context
// inference yet (matching plain generic-struct construction).
enum Option<T> { None, Some(T) }

@export
proc main() i32 {
    let a: Option<i32> = Option::Some(5);
    return 0;
}
